2008-09-03  Marius Vollmer  <marius.vollmer@nokia.com>

	Make maemo-select-menu-location do nothing.

	* utils/Makefile.am: Don't use the launcher for
	maemo-select-menu-location.
	* maemo-select-menu-location (main): Just print warning and exit.
	Removed all the rest.

	Removed the 'essential' flag for catalogues.

	* src/repo.h: remove the essential tag documentation
	* src/repo.cc: (reformat) subs spaces for tabs
	(is_read_only_entry): function removed
	(cat_edit_response): use the the readonly flag for enabled/disable
	buttons
	(show_cat_edit_dialog): the readonly flag doesn't care for the
	dialog buttons, use the flag instead of the removed function
	(cat_selection_changed): simplify the boolean operation for
	sensitivity.
	(make_catcache_from_xexp): activation of the readonly flag

2008-08-29  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc (ip_reboot_now, ip_flash_and_reboot_reply):
	Make sure that the interaction flow ends eventually even if the
	reboot does not happen.

	* src/util.cc (get_https_proxy): Fall back to "https_proxy"
	envvar.

	* src/settings.cc: Make red_pill_show_all and
	red_pill_show_magic_sys default to false.

2008-08-28  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.2.0

	* src/apt-worker-client.cc, src/apt-worker-client.h,
	src/apt-worker.cc, src/details.cc, src/main.cc, src/operations.cc:
	Shut up some new warnings.  Be more const correct.  Put
	parentheses around assignments used as conditions.

	* src/dbus.cc (send_reboot_message): Do nothing when
	MCE_REBOOT_REQ is not defined.

	* configure.ac: Make libalarm dependency optional.
	* src/update-notifier.c: Only use alarm API when HAVE_LIBALARM_PKG
	is defined.

	* Makefile.am: Make sure DESTDIR is honored in all cases.
	(install-local): Create the directory where packages are supposed
	to drop their catalogue fragments.

2008-08-27  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/confutils.cc (backup_catalogues): Don't look at the